--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 fixtures:
-  forge_modules:
-    stdlib: "puppetlabs/stdlib"
   symlinks:
     rear: "#{source_dir}"
+  repositories:
+  forge_modules:
+    stdlib: "puppetlabs-stdlib"
